# festin

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
.github/workflows/: upload-pypi.yml
examples/: alexa-top-1000.txt  blacklist.txt  loop.sh
festin/: __init__.py  __main__.py  analysis.py  black_list.py  events.py  fulltext.py  logo.py  redis.py  s3.py  utils.py
images/: festin-logo-banner.afdesign  festin-logo-social.afdesign  festin-logo.afdesign
