[metadata]
name = festin
description = Festin is a powered S3 bucket finder and content discover
version = file: VERSION
long_description = file: README.rst TODO.rst
license = License :: OSI Approved :: BSD License
classifiers =
  Programming Language :: Python :: 3.8
authors = cr0hn
authors_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/festin

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    festin = festin.__main__:main
